# mani-expr

./: CMakeLists.txt  README.md
cviceni1/: main.cpp
macro-processor-parameters/: CMakeLists.txt  macro_processor.cpp  macro_processor.hpp  main.cpp
src/: Expression.hpp  ExpressionNode.hpp
tests/: differentiation_test.cpp  simplify_test.cpp
zapoctovy-program/: CMakeLists.txt  demo.cpp  main.cpp
zapoctovy-program/src/: Expression.cpp  Expression.hpp  ExpressionNode.hpp  expression.hpp
zapoctovy-program/tests/: complex_test.cpp  creation_eval_test.cpp
